# backend-assessment

./: .pre-commit-config.yaml  README.md  age.py  company_id.py  data_exporter.py  data_importer.py  full_name.py  main.py  models.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
assets/: user.json
backend_assesment/: data_exporter.py  data_importer.py  main.py  models.py
backend_assessment/: data_exporter.py  data_importer.py  main.py  models.py
github/workflows/: ci.yaml
output/: output.json
tests/: test_data_exporter.py  test_data_importer.py  test_main.py
tests/models/: test_company.py  test_user.py
